DbPath 클래스 추가로 인한 잔수정.